Fix overflow

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -21,4 +21,5 @@
   width: 100%;
   position: absolute;
   z-index: 5;
+  min-height: 100vh;
 }
